# perapin

./: .env.example  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  metadata.json  next.config.ts  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yml
app/: globals.css  layout.tsx  page.tsx
app/api/feedback/: route.ts
app/api/nonce/: route.ts
app/api/pay/: route.ts
app/api/signup/: route.ts
app/api/transactions/: route.ts
app/consumer/: layout.tsx
app/consumer/dashboard/: page.tsx
app/feedback/: page.tsx
app/login/: page.tsx
app/merchant/: layout.tsx
components/shared/: InspectorConsole.tsx  VirtualPinPad.tsx
contracts/perapin/: Cargo.toml
contracts/perapin/src/: lib.rs
contracts/perapin/test_snapshots/tests/: test_change_pin_success.1.json  test_change_pin_wrong_old_hash_fails.1.json  test_lockout_expires_after_15_minutes.1.json  test_pay_lockout_after_three_failures.1.json  test_pay_resets_counter_on_success.1.json  test_pay_success.1.json  test_pay_unregistered_wallet_fails.1.json  test_pay_wrong_pin_increments_attempts.1.json  test_pay_zero_amount_fails.1.json  test_unregistered_wallet_not_locked.1.json
docs/: perapin-prd.md  schema.sql  supabase-schema.sql
hooks/: use-mobile.ts  use-session-storage.ts
lib/: auth.ts  client-crypto.ts  crypto.ts  stellar.ts  supabase-browser.ts  supabase.ts  types.ts
lib/services/: mockStorage.ts
public/: manifest.json
(+22 files in other folders)
