[package]
name = "perapin"
version = "0.1.0"
edition = "2021"
authors = ["PeraPin Contributors"]
description = "Soroban smart contract for PeraPin micropayment system on Stellar"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "27", features = [] }

[dev-dependencies]
soroban-sdk = { version = "27", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
